--- a/frontEnd/src/app/pages/CadastroCliente/cadCliente.component.html
+++ b/frontEnd/src/app/pages/CadastroCliente/cadCliente.component.html
@@ -14,7 +14,7 @@
 <!--<dx-scroll-view></dx-scroll-view>///<dx-form></dx-form>-->
 <dx-list></dx-list>
 <dx-data-grid
-  [dataSource]="jsonC"
+  [dataSource]="clientes"
   displayExpr="nome">
 </dx-data-grid>
 <dx-button text="Deletar" width="50%"></dx-button>
